Newest Folder w/cTheriac Updates

--- a/BoardDesign/BoardGame/BoardGame.csproj
+++ b/BoardDesign/BoardGame/BoardGame.csproj
@@ -54,6 +54,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="checkerRules.cs" />
+    <Compile Include="SaveLoad.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Tiles.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -71,6 +74,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -84,6 +88,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\DownArrow.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\LeftArrow.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\PlaceButton.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\RightArrow.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\UpArrow.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
